fixed fox photos clipping at tablet viewport, added id to header button

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,7 +100,7 @@ select option {
 
 .endgame-img {
   max-height: 425px;
-  max-width: 500px;
+  max-width: 100%;
   object-fit: scale-down;
   margin: 0 auto;
   border-radius: 4px;
